@@ -1,7 +1,12 @@
 #ifndef _WX_PROGDLG_H_BASE_
 #define _WX_PROGDLG_H_BASE_
 
-#include "wx/generic/progdlgg.h"
+#include "wx/defs.h"
 
+#ifdef __WXPALMOS__
+    #include "wx/palmos/progdlg.h"
+#else
+    #include "wx/generic/progdlgg.h"
 #endif
-    // _WX_PROGDLG_H_BASE_
+
+#endif // _WX_PROGDLG_H_BASE_
